# tls-attestproxy

./: .gitignore  Cargo.toml  README.md  buildimg.sh  flake.nix  linux.cfg
crates/tls-attestclient/: Cargo.toml
crates/tls-attestclient/src/: certify_protocol.rs  certify_protocol_client.rs  lib.rs  message_verification.rs  secure_connection.rs  secure_connection_client.rs  signed_message.rs  signing_key_attestation.rs
crates/tls-attestproxy/: Cargo.toml
crates/tls-attestproxy/src/: attestation_key.rs  certify_protocol_server.rs  lib.rs  main.rs  message_signing.rs  secure_connection_server.rs  signed_message.rs  signing_key.rs
crates/tls-attestproxy/tests/: integration_test.rs  signing_key_test.rs
crates/tls-attestverify/: Cargo.toml
crates/tls-attestverify/src/: lib.rs  message_verification.rs  signed_message.rs  signed_transcript.rs  signing_key_attestation.rs  validator.rs
crates/workspace-hack/: Cargo.toml
docs/: AWS.md  GCP.md  example-asciipcrlog-gcp.txt  example-binpcrlog-gcp  gcp-ak-template  gcp-confidential-computing-example-cert.base64-der  gcp-confidential-computing-example-cert.crt  gcp-confidentialcomputing-getshieldedidentity-output  gcp-shieldedvm-nonconfidential-getshieldedidentity-output  google-ek-ca.crt
gcp-deploy/: README.md  config.tmpl  create-bucket.sh  launch-vm.sh  upload-image.sh
mkbootimg/: mkbootimg.sh
packcpio/: init  mkcpio.sh
snakeoil-pesign/: README.md  snakeoil.crt
snakeoil-pesign/nss/: cert9.db  key4.db  pkcs11.txt
src/: certify_protocol.rs  certify_protocol_server.rs  main.rs  message_signing.rs  secure_connection.rs  signed_message.rs  signing_key.rs
