[package]
name = "tls-attestproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
anyhow = "1.0.95"
env_logger = "0.11.6"
futures-util = "0.3.31"
# Unfortunately this needs a recent libtss2-sys relative to Debian Bookworm. But it supports more
# TSS2 commands in the binding. Will need to build through nix or install from source.
tss-esapi = { git = "https://github.com/parallaxsecond/rust-tss-esapi", rev = "b25394f2e3d24f4bd873682ce7947c9c8793b5a2" }
