[package]
name = "tls-attestclient"
edition = "2024"
version.workspace = true

[dependencies]
bincode = { version = "2.0.0", features = ["serde"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
tls-attestverify = { version = "0.1", path = "../tls-attestverify" }
serde = "1.0.217"
serde_json = "1.0.138"
serde_with = { version = "3.12.0", features = ["base64", "hex"] }
sha2 = { version = "0.10.8", features = ["oid"] }
aes-gcm = "0.10.3"
anyhow = "1.0.95"
rsa = "0.9.8"
zerocopy = { version = "0.8.24", features = ["derive"] }
binrw = "0.14.1"
p256 = { version = "0.13.2", features = ["serde", "ecdh"] }
tokio-websockets = { version = "0.11.4", features = ["client", "getrandom", "ring", "rustls-native-roots"] }
http = "1.3.1"
tokio = { version = "1.45.0", features = ["macros", "net", "rt"] }
futures-util = { version = "0.3.31", features = ["sink"] }
