[package]
name = "tls-attestproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
aes-gcm = "0.10.3"
anyhow = "1.0.95"
rand = "0.9.0"
bincode = { version = "2.0.0", features = ["serde"] }
elliptic-curve = { version = "0.13.8", features = ["ecdh"] }
env_logger = "0.11.6"
futures-util = "0.3.31"
no-panic = "0.1.33"
serde = "1.0.217"
serde_json = "1.0.138"
serde_with = { version = "3.12.0", features = ["base64"] }
sha2 = "0.10.8"
# Unfortunately this needs a recent libtss2-sys relative to Debian Bookworm. But it supports more
# TSS2 commands in the binding. Will need to build through nix or install from source.
tss-esapi = { git = "https://github.com/parallaxsecond/rust-tss-esapi", rev = "b25394f2e3d24f4bd873682ce7947c9c8793b5a2", features = ["serde"] }
rand_core = { version = "0.9.3", features = ["os_rng"] }
log = "0.4.27"
rustls = { version = "0.23.25", features = ["log", "logging", "ring", "std"], default-features = false }
rustls-platform-verifier = "0.5.1"
der = "0.7.9"
x509-cert = { version = "0.2.5", features = ["sct"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
tls-attestclient = { version = "0.1", path = "../tls-attestclient" }
p256 = { version = "0.13.2", features = ["serde", "ecdh"] }
binrw = "0.15.0"
tokio = "1.45.0"

[dev-dependencies]
actix-rt = "2.10.0"
actix-test = "0.1.5"
hex-literal = "0.4.1"
http = "1.3.1"
mem = "0.5.0"
rsa = "0.9.8"
tempfile = "3.19.1"
